--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=restful-web-services
 logging.level.org.springframework = info
+#below one is to display all the end points of actuator
+management.endpoints.web.exposure.include = *
