--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=restful-web-services
 logging.level.org.springframework = info
+spring.sql.init.mode=always
 #below one is to display all the end points of actuator
 management.endpoints.web.exposure.include = *
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+#data.sql under resources is executed before table is created in h2DB so we want to delay it using below property
+spring.jpa.defer-datasource-initialization=true
