--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 #data.sql under resources is executed before table is created in h2DB so we want to delay it using below property
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
